# vaultrix

./: .editorconfig  .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
extension/: background.ts  base64-polyfill.ts  content.ts  manifest.json  options.html  package.json  popup.html  vite.config.ts  wasm-mime-polyfill.ts
scripts/: copy-olm-wasm.cjs  ensure-tauri-icon.cjs
tauri/: Cargo.toml  README.md  package.json  tauri.conf.json
tauri/icons/: README.txt
tauri/src/: lib.rs  main.rs
