[package]
name = "vaultrix-vault"
version = "0.1.0"
description = "Vaultrix Vault - Matrix-based password manager"
authors = ["Vaultrix"]
edition = "2021"
rust-version = "1.70"

[lib]
name = "vaultrix_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
